<resources>
    <string name="app_name">CriminalIntentApp</string>

    <!--CrimeFragment use begin-->
    <string name="crime_title_label">Title</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_suspect_text">CHOOSE SUSPECT</string>
    <string name="crime_report_text">SEND CRIME REPORT</string>
    <string name="crime_dial_text">DIAL TO SUSPECT</string>
    <!--end-->

    <string name="date_picker_title">Date of crime:</string>

    <string name="time_picker_title">Time of crime:</string>
    <string name="time_picker_positive">OK</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="delete_crime">Delete Crime</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%s crime</item>
        <item quantity="other">%s crimes</item>
    </plurals>

    <string name="crime_report">%1$s!
        The crime was discovered on %2$s, %3$s, and %4$s
    </string>

    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>
